fix:letter-spacingの値変更

--- a/static/stock/scss/stock.scss
+++ b/static/stock/scss/stock.scss
@@ -6,7 +6,7 @@ $cBorder: #dfdfdf;
 .main-title {
     font-family: 'Passion One', cursive;
     font-size: 40px;
-    letter-spacing: -2px;
+    letter-spacing:3px;
 }
 
 .get-data {
